--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.2",
     "@remix-run/dev": "^2.6.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.20",
